<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Rally</string>
    <string name="Registrar_juez">Registrar Juez</string>
    <string name="Registrar">Registrar</string>
    <string name="Nombre_completo">Nombre completo</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrase_a">Contraseña</string>
    <string name="Contrase_a_Confirmar">Confirme Contraseña</string>

    <!--login-->
    <string name="LoginContrase_a">Contraseña</string>
    <string name="LoginUsuario">Usuario</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Cambio_d_contrase_a">Cambio de contraseña</string>

    <!--Modulo juez-->
    <string name="Menu_juez">Jueces</string>
    <string name="RegistrarJuez">Registrar</string>
    <string name="Consultar">Consultar</string>
    <string name="Modificar">Modificar</string>
    <string name="Eliminar">eliminar</string>

    <!--- menu de puntos de control-->
    <string name="Puntos_de_control">Puntos de Control</string>
    <string name="Confirmar_llegada">Confirmar Llegada</string>
    <string name="Asignar_prueba">Asignar Prueba</string>
    <string name="Confirmar_salida">Confirmar Salida</string>
    <string name="supervisi_n_de_puntos_de_control">Supervisión de puntos de control</string>

    <string name="Llegada_a_punto_de_control">Llegada a punto de control</string>
    <string name="Ruta_actual">Ruta actual</string>
    <string name="Etapa">Etapa #11 XXXXXXXXX</string>
    <string name="Trivia">Trivia XXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="Puntos_extra">Puntos extra</string>
    <string name="Prueba">Prueba</string>
    <string name="EnunciadoPrueba">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="C_digo_dl_punto_de_control">Código del punto de control</string>
    <string name="ActualizarCodigo">Actualizar</string>
    <string name="Lista_de_puntos_extra">Lista de puntos extra</string>


</resources>
