<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Ruta_actual"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtPuntoControlSeguirRuta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Etapa"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Trivia"
        android:textAlignment="textStart"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickLlgada"
        android:text="@string/Llegada_a_punto_de_control" />

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickPuntosExtra"
        android:text="@string/Puntos_extra" />
</LinearLayout>
